--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,8 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_home">자음/모음</string>
+    <string name="menu_gallery">단어</string>
+    <string name="menu_slideshow">구화번역기</string>
+    <string name="menu_game">게임</string>
 </resources>
